added geolocation to show user's location

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
       <div class="card">
         <h2>Current Air Quality</h2>
         <div id="aqiDisplay" class="aqi-good">Loading...</div>
-        <p>Location: <span id="location">Kuala Lumpur</span></p>
+        <p>Location: <span id="showLocation"></span></p>
       </div>
 
       <div class="card">
