--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>PolluCheck 🌬️</h1>
-      <p>Real-time air quality alerts for at risk asthmaitic children</p>
+      <p>Real-time air quality alerts for at risk asthmatic children</p>
     </header>
 
     <div class="alert-banner" id="alertBanner">
@@ -20,7 +20,8 @@
       <div class="card">
         <h2>Current Air Quality</h2>
         <div id="aqiDisplay" class="aqi-good">Loading...</div>
-        <p>Location: <span id="location">Kuala Lumpur</span></p>
+        <h2>Location:</h2>
+        <div> id="storeLocation"></div>
       </div>
 
       <div class="card">
